Fixed the navigation Problems Change the default navigation bg-color & nav color Fixed banner nav error in positioning it in bottom of banner Fixed the responsive problem of banner contents make responsive upto 400px

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -35,7 +35,7 @@
                 <span class="content">
                   <p>Telephone:</p>
                   <p>
-                    818-322-6168
+                    818-724-2851
                   </p>  
                 </span>
                 
@@ -45,7 +45,7 @@
                 </i>
               <span>
                 <p>Email:</p>
-                <p>nodebomb@info.com</p>
+                <p>info@nodebomb.com</p>
               </span>
               </div>
             </div>
