--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,12 @@
   <div class="container banner-margin-top">
     <div class="row">      
       <section class="header_content">
-        <h1 ><span>increase.</span><br> <span class="bold-banner-txt">connect & support</span><span class="what-yuo-build-txt">Whatyouwillbuild</span></h1>
-        <p class="banner-txt">The Online Work Showcase for Software Developers, enhance and connect your entire work footprint with one click. We make connecting you to the job and to fellow Developers across the globe easy.</p>
+        <h1 ><span>increase.</span><br> <span class="bold-banner-txt">connect & support</span><span class="what-yuo-build-txt">#Whatwillyoubuild</span></h1>
+        <p class="banner-txt">The Online Work Showcase for Software Developers, enhance and connect your entire work footprint with one click.</p>
         <section class="email_register ">
           <form action="" class="">
             <div class="form-group">
-              <label for=""> Register now developers for early access</label><br>
+              <label for=""> Developer's Register now for early access </label><br>
               <div class="form-wrap">
                 <input type="text" class="form-control" placeholder="Enter your email address">
                 <button type="submit" class="btn btn-default email-submit-btn">Submit</button>
@@ -120,8 +120,8 @@
     <div class="item">
       <div class="col-sm-12">
         <div class="team_member text-center">
-          <div class="team_images mem1"></div>
-          <h4><span class="story-prsn-name"><strong>Eric</strong></span> <span>USA</span></h4>
+          <div class="team_images mem2"></div>
+          <h4><span class="story-prsn-name"><strong>Amit</strong></span> <span>Bangladesh</span></h4>
           <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis.Lorem ipsum dolor sit amet,"</p>                      
         </div>
       </div>
@@ -129,8 +129,8 @@
     <div class="item">
       <div class="col-sm-12">
         <div class="team_member text-center">
-          <div class="team_images mem1"></div>
-          <h4><span class="story-prsn-name"><strong>Eric</strong></span> <span>USA</span></h4>
+          <div class="team_images mem3"></div>
+          <h4><span class="story-prsn-name"><strong>Pavel</strong></span> <span>Canada</span></h4>
           <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis.Lorem ipsum dolor sit amet,"</p>                      
         </div>
       </div>
