--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -272,7 +272,7 @@ fieldset[disabled] .btn-xl.active {
 header.hero {  
   color: #fff;
   background-attachment: scroll;
-  background-image: asset_url('banner.jpg');
+  background-image: asset_url('banner-1.jpg');
   background-position: center center;
   background-repeat: none;
   -webkit-background-size: cover;
