--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -6,11 +6,12 @@
 .home_logocontent
   a.navbar-brand p
     color: #fff
+.main-navbar > .home-top-nav
+  display: none !important
 #navigation
   background-color: rgba(47, 166, 218, 0.81) !important
-  position: relative
+  position: absolute
   bottom: 0px
-  top: 178px
   width: 100%
   padding: 15px 0px
 .banner-nav
@@ -139,7 +140,7 @@ a.navbar-brand
   padding : 60px 0px
 
 header.hero
-  min-height: 680px
+  height: 680px
   position: relative
   width: 100%
   section
@@ -176,7 +177,6 @@ header.hero
       font-size: 20px
       width: 60%
       line-height: 30px
-      margin-top: -10px
   .header-element
     position: relative
     margin-top: 10px
@@ -297,7 +297,7 @@ section
   width: 110px
   height: 110px
   margin-bottom: 30px
-  border: 5px solid #eee
+  border: 5px solid #CECFCF
 .dark-grey
   background-color: #DDD 
 
@@ -583,7 +583,8 @@ section
     margin-left: -8px
   .navbar-brand span span
     font-family: 'texgyreadventor-bold' 
-
+.carousel-indicators .active
+  background-color: #000
   
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
@@ -604,7 +605,6 @@ section
     font-size: 19px
   .email_register label, .bottom-email_register label
     font-size: 30px
-    margin: 20px 0px
   .form-wrap
     width: 50%
   .presentation_video
@@ -634,7 +634,6 @@ section
     font-size: 23px
     line-height: 50px
   #navigation
-    top: 189px
   .community_blocks
     .col-md-3
       width: 50%
@@ -659,9 +658,8 @@ section
     font-size: 19px
   .email_register label, .bottom-email_register label
     font-size: 30px
-    margin: 20px 0px
   .form-wrap
-    width: 50%
+    width: 75%
   .presentation_video
     height: 500px
     width: 100%
@@ -691,7 +689,6 @@ section
     font-size: 23px
     line-height: 50px
   #navigation
-    top: 189px
   #showcase
     height: 100%
 @media (min-width: 768px) and (max-width: 979px)
@@ -713,7 +710,6 @@ section
     font-size: 19px
   .email_register label, .bottom-email_register label
     font-size: 30px
-    margin: 20px 0px
   .form-wrap
     width: 78%
   .presentation_video
@@ -744,12 +740,22 @@ section
   .bottom-email_register label
     margin: 0px
   #navigation
-    top: 189px
   #showcase
     height: 100%
 @media (max-width: 767px)
-  .hero
-    padding: 0px 10px
+  .navbar-default .nav li a
+    color: #fff
+    background-color: rgba(47, 166, 218, 0.81)
+    &:hover
+      background-color: rgba(47, 166, 218, 0.81)
+      color: #000
+  .navbar-default
+    background-color: transparent
+  .main-navbar .home-top-nav
+    display: block !important
+    background-color: transparent
+  header.hero .header_content
+    padding:  0px 15px
   .navbar > .container > .navbar-header > a.navbar-brand
     margin: 0px
   header.hero .header_content h1
@@ -766,8 +772,7 @@ section
     width: 100%
     font-size: 19px
   .email_register label, .bottom-email_register label
-    font-size: 30px
-    margin: 20px 0px
+    font-size: 28px
   .form-wrap
     width: 78%
   .presentation_video
@@ -796,7 +801,6 @@ section
     height: 100%
     margin-top: 75px
   #navigation
-    display: none
   .bottom-email_register label
     margin: 0px
   .community
@@ -805,12 +809,20 @@ section
     padding: 0px 20px
     height: 100%
 @media (min-width: 580px) and (max-width: 767px)
+  header.hero .header_content
+    padding: 0px 15px 
+  .navbar-default
+    background-color: transparent
   #showcase img
     width: 100%
     height: 100%
   #showcase
     height: 100%
 @media (max-width: 725px)
+  header.hero .header_content
+    padding: 0px 15px 
+  .navbar-default
+    background-color: transparent
   .presentation_video iframe
     width: 92%
     height: 85%
@@ -821,8 +833,10 @@ section
   #showcase
     height: 100%
 @media (max-width: 580px)
-  .hero
-    padding: 0px 10px
+  .navbar-default
+    background-color: transparent
+  header.hero .header_content
+    padding: 0px 15px
   .navbar > .container > .navbar-header > a.navbar-brand
     margin: 0px
   header.hero .header_content h1
@@ -839,8 +853,7 @@ section
     width: 100%
     font-size: 19px
   .email_register label, .bottom-email_register label
-    font-size: 25px
-    margin: 10px 0px
+    font-size: 22px
   .form-wrap
     width: 100%
   .presentation_video
@@ -869,30 +882,30 @@ section
     height: 100%
     margin-top: 75px
   #navigation
-    display: none
   #showcase
     height: 100%
 @media (max-width: 480px)
-  .hero
-    padding: 0px 10px
+  .navbar-default
+    background-color: transparent
+  header.hero .header_content
+    padding: 0px 15px
   .navbar > .container > .navbar-header > a.navbar-brand
     margin: 0px
   header.hero .header_content h1
     line-height: 55px
   header.hero .header_content h1 span
-    font-size: 35px
+    font-size: 30px
   header.hero .header_content h1 .bold-banner-txt
     display: block
-    font-size: 35px
+    font-size: 30px
   header.hero .header_content h1 .what-yuo-build-txt
-    font-size: 23px
+    font-size: 20px
     margin-left: 0px
   header.hero .header_content .banner-txt
     width: 100%
     font-size: 19px
   .email_register label, .bottom-email_register label
-    font-size: 25px
-    margin: 10px 0px
+    font-size: 20px
   .form-wrap
     width: 100%
   .presentation_video
@@ -922,4 +935,24 @@ section
     width: 100%
     height: 100%
   #navigation
-    display: none
+
+@media (max-width: 320px)
+  .navbar-default
+    background-color: transparent
+  header.hero .header_content
+    padding: 0px 15px
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 30px
+  header.hero .header_content h1 span
+    font-size: 28px
+  header.hero .header_content h1 .bold-banner-txt
+    display: block
+    font-size: 28px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 15px
+    margin-left: 0px
+  header.hero .header_content .banner-txt
+    width: 100%
+    font-size: 15px
