--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,16 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default main-navbar">
+<nav class="navbar navbar-default main-navbar home-top-nav">
   <div class="container">
     <div class="row">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header page-scroll">
-        <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <!-- <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button> -->
-        <a class="navbar-brand page-scroll" href="/">
+        </button>
+ -->        <a class="navbar-brand page-scroll" href="/">
           <%=image_tag ("logo.png") %><!--  <span><span>Node</span>Bomb</span> -->
         </a>
       </div>
