Fixed the responsive view of register forms in moblie view reduce the lavel font-size reduce button paddings.

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -652,12 +652,13 @@ section
     font-size: 42px
   header.hero .header_content h1 .what-yuo-build-txt
     font-size: 23px
-    margin-left: 20px
+    margin-left: 14px
   header.hero .header_content .banner-txt
     width: 70%
     font-size: 19px
   .email_register label, .bottom-email_register label
     font-size: 30px
+    margin: 10px 0px
   .form-wrap
     width: 75%
   .presentation_video
@@ -934,9 +935,11 @@ section
   #showcase img
     width: 100%
     height: 100%
-  #navigation
-
-@media (max-width: 320px)
+  .email_register .form-control, .bottom-email_register .form-control
+    font-size: 16px
+  .email_register .btn, .bottom-email_register .btn
+    padding: 0px 10px
+@media (max-width: 390px)
   .navbar-default
     background-color: transparent
   header.hero .header_content
@@ -956,3 +959,7 @@ section
   header.hero .header_content .banner-txt
     width: 100%
     font-size: 15px
+  .email_register .form-control, .bottom-email_register .form-control
+    font-size: 16px
+  .email_register .btn, .bottom-email_register .btn
+    padding: 0px 10px
