make lower the banner text 'whatwillyoubuild' and add nodebomb presentation video in Presentation section

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -173,6 +173,7 @@ header.hero
         font-family: 'raleway-regular'
         margin-left: 30px
         vertical-align: top
+        text-transform: none
     .banner-txt
       font-size: 20px
       width: 60%
