--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container banner-margin-top">
     <div class="row">      
       <section class="header_content">
-        <h1 ><span>increase.</span><br> <span class="bold-banner-txt">connect & support</span><span class="what-yuo-build-txt">#Whatwillyoubuild</span></h1>
+        <h1 ><span>increase.</span><br> <span class="bold-banner-txt">connect & support</span><span class="what-yuo-build-txt">#whatwillyoubuild</span></h1>
         <p class="banner-txt">The Online Work Showcase for Software Developers, enhance and connect your entire work footprint with one click.</p>
         <section class="email_register ">
           <form action="" class="">
@@ -82,7 +82,7 @@
       </div>
       <div class="col-md-12">
         <div class="presentation_video">
-          <iframe width="825" height="490" src="https://www.youtube.com/embed/SkdrYWhh-8s" frameborder="0" allowfullscreen></iframe>
+          <iframe width="825" height="490" src="https://www.youtube.com/embed/NNi9cFk56is" frameborder="0" allowfullscreen></iframe>
         </div>
         <article>
           <p class="Presentation-article">One of the fastest growing professions in the world...currently the demand to support that voice, outweighs the supply
