change the content texts of About us page and add link to bottom footer social media

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -16,11 +16,10 @@
       </div>
       <div class="col-md-7 about-content">
         <h2>Welcome to NodeBomb</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br><br> when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br><br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text.Lorem Ipsum has been the industry's standard dummy text ever since.Lorem Ipsum has been the industry's .</p>
+        <p>Increase Job Opportunities, Connect & Support Developers across the world.</p>
+        <p>The Online Work Showcase for developers, enhance and connect your entire work footprint with one click. Share your portfolio, resume, staff, relevant social media sites and much more...all with one well designed click. Make connecting you to the job and the world easier.</p>
+        <p>Also, connect with fellow developers across the globe, share ideas, join Q&A groups and get programming/code assistance.</p>
       </div>
-      <!-- <div class="col-md-12 last-p">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-      </div> -->
-  </div>
+    </div>
   </div>
 </section>
