Change the story slider info content texts of marketing page. change the title of group-desktops into "use easily on any device". changes the particular staff's detail info text inside the staff page. Edit the staff's particular images in fixed height and width. Save the staff's images into png files. Implement the edited staff's images in staff html design layout.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -113,7 +113,7 @@
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
           <h4><span class="story-prsn-name"><strong>Eric</strong></span> <span>USA</span></h4>
-          <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis.Lorem ipsum dolor sit amet,"</p>                      
+          <p>" I created a profile and, <br> and just landed my dream job"</p>                    
         </div>
       </div>
     </div>
@@ -122,7 +122,7 @@
         <div class="team_member text-center">
           <div class="team_images mem2"></div>
           <h4><span class="story-prsn-name"><strong>Amit</strong></span> <span>Bangladesh</span></h4>
-          <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis.Lorem ipsum dolor sit amet,"</p>                      
+          <p> " Instantly increases my job opportunities because I'm competing against a smaller pool of developers "</p>                      
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
         <div class="team_member text-center">
           <div class="team_images mem3"></div>
           <h4><span class="story-prsn-name"><strong>Pavel</strong></span> <span>Canada</span></h4>
-          <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis.Lorem ipsum dolor sit amet,"</p>                      
+          <p> "  The Q&A Groups helped me fix <br>a bug in my code "</p>                      
         </div>
       </div>
     </div>
@@ -222,10 +222,10 @@
   <div class="container text-center">
     <div class="row">
       <div class="displaying-section-heading">
-        <h2>Use easily <br> <span>NodeBomb on any devices</span></h2>
+        <h2>Use easily <br> <span>on any devices</span></h2>
         <div class="heading-border"></div>
       </div>
-      <%=image_tag("desk-group.png", :alt => "Displaying layout") %>
+      <%=image_tag("desk-group-2.png", :alt => "Displaying layout") %>
     </div>
   </div>
 </section>
