--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -417,14 +417,14 @@ section
   height: 100%
   width: 100%
   text-align: center
-  padding: 30px
+  padding: 0px 18px
   
   h2
     padding-bottom: 10px
     font-size: 24px
   
   p
-    padding-top: 20px
+    padding-top: 17px
     font-size: 16px
   
   .subheading
