--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -24,34 +24,27 @@
     </div>
     <div class="col-md-6">
       <div class="staff-img">
-        <%= image_tag ('staff-1.png')%>
+        <%= image_tag ('staff-mem-1.png')%>
       </div>
     </div>
   </section>
   <section class="row">
     <div class="col-md-6">
       <div class="staff-img">
-        <%= image_tag ('staff-2.png')%>
+        <%= image_tag ('staff-mem-2.png')%>
       </div>
     </div>
     <div class="col-md-6">
       <div class="staff-info ">
-        <h2>Patrick Watson</h2>
+        <h2>Ali Amirazizi</h2>
         <div class="name-border"></div>
         <div class="subheading">
-          <strong>Marketing</strong>
-          <span class="university-name">University of Massachusetts</span>
+          <strong>Web Developer</strong>
+          <span class="university-name"> CS University Long Beach</span>
         </div>
-        <p>451 Marketing is a fully
-          integrated marketing and
-          communications agency
-          specializing in creative services,
-          advertising, public relations,
-          digital and social marketing,
-          media buying, experiential, and
-          content marketing. I manage,
-          facilitate, and develop new business
-          proposals and sales collateral.
+        <p>With more than 3 years of experience in it, startups, customer service, sales, and marketing, Ali has launched a new career in web development. He specialize in front end development. Experienced with all stages of the development cycle for dynamic web projects. He is well versed in numerous programming language including JavaScript, SQL, and PHP.
+        Prior to joining NodeBomb, Ali worked for a software startup called Kuapay where he specialized in providing IT support. He organized marketing campaigns, and assisted with daily operations. He also worked as a QA gane tester for Square-Enix, a Japanese video company.
+        Ali has a degree in philosophy and is currently pursing a second degree in computer science.
         </p>
       </div>
     </div>
@@ -59,64 +52,96 @@
   <section class="row bg-gery">
     <div class="col-md-6">
       <div class="staff-info ">
-        <h2>Stephen Curry</h2>
+        <h2>Rene Zelaya</h2>
         <div class="name-border"></div>
         <div class="subheading">
-          <strong>Front End Developer</strong>
-          <span class="university-name">UCSB</span>
+          <strong> Designer</strong>
+          <span class="university-name">San Francisco Art Institude</span>
         </div>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+        <p>As a UX/UI Rene loves to Figure out what makes people tick. He appreciates the investigation into how peoples actions and behaviors are influenced by theirs senssory input, emotional state and opportunities that are presented to them. Answering these question with a effective and easy to use UI is how Rene brings value to any project he works on. Connecting users to their goals is where he finds success.
+        Strating as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype.
+        Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco.
+        He has experience in User Research, Information Architecture and Visual Design.</p>
       </div>
     </div>
     <div class="col-md-6">
       <div class="staff-img">
-        <%= image_tag ('staff-3.png')%>
+        <%= image_tag ('staff-mem-3.png')%>
       </div>
     </div>
   </section>
   <section class="row">
     <div class="col-md-6">
       <div class="staff-img">
-        <%= image_tag ('staff-2.png')%>
+        <%= image_tag ('staff-mem-4.png')%>
       </div>
     </div>
     <div class="col-md-6">
       <div class="staff-info ">
-        <h2>Joshua Hall</h2>
+        <h2>Ratanak Chheang</h2>
         <div class="name-border"></div>
         <div class="subheading">
-          <strong>Back End Developer</strong>
-          <span class="university-name">UCSB</span>
+          <strong> Web Developer</strong>
+          <span class="university-name"> Norton University</span>
         </div>
-        <p>451 Marketing is a fully
-          integrated marketing and
-          communications agency
-          specializing in creative services,
-          advertising, public relations,
-          digital and social marketing,
-          media buying, experiential, and
-          content marketing. I manage,
-          facilitate, and develop new business
-          proposals and sales collateral.
+        <p>Ratanak has been in the tech industry fir the least 3 year with an expertise in full-stack (front/back-end) development. He began his career in IT support for a non Profit and successfully built a website for an internal phone extension directory fir all employees. After graduating from developer bootcamp, he received invaluable experience working as the back-end developer for  the start-up company, GameKulture   Inc and also during that time founded his own startup with a realtor business.
+        “I love to ask people question and give ideas about the future features that end users need ”, he says. Since learning to code was so difficult for Ratanak, his passion to assist others from his knowledge and experience is an asset to the company.
         </p>
+      </div>
+    </div>
+  </section>
+  <section class="row bg-gery">
+    <div class="col-md-6">
+      <div class="staff-info ">
+        <h2>Karyn Martin</h2>
+        <div class="name-border"></div>
+        <div class="subheading">
+          <strong>  Public Relations</strong>
+          <span class="university-name">UMASS, Amherst</span>
+        </div>
+        <p>Karyn has more than 15 years of public relations experience representing technology, consumer packaged goods, retail, travel, B2B, and health care clients. Karyn specializes in developing and managing integrated public relations programs for clients including NxStage Medical, The Yankee Candle Company, BAILEYS Coffee Creamers and more, She currently servers as President of the Publicity Club of New England.
+        Prior to joining 451 Marketing, Karyn spent five years ar Emerge PR, representing a wide range of local and national clients inculiding, Cartessis, CSG Systems, Harte-Hanks, Information Builders, Tizor and Trillium software. Karyn is an award-winning PR practitioner and has been published multiple times in PR trade publications.</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="staff-img">
+        <%= image_tag ('staff-mem-5.png')%>
       </div>
     </div>
   </section>
   <section class="row bg-gery">
       <div class="col-md-6">
+        <div class="staff-img">
+          <%= image_tag ('staff-mem-6.png')%>
+        </div>
+      </div>
+      <div class="col-md-6">
         <div class="staff-info ">
-          <h2>Mackenzie Singh</h2>
+          <h2>Tyrone Pardue</h2>
           <div class="name-border"></div>
           <div class="subheading">
-            <strong>Back End Developer</strong>
-            <span class="university-name">UCSB</span>
+            <strong> Branding</strong>
+            <span class="university-name">College of Marketing & Design</span>
           </div>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+          <p> As Director of Boarding at 451 Marketing, Tyrone brings over 25 yeard of international branding and creative experience to our firm. Tyrone helps companies develop winning strategies to strengthen brand presence, increase sales and forge strong customer relationships. Tyrone’s specialties include brand and corporate identity development, corporate communications, information design, product packaging, corporate and marketing collateral. Selected client experience includes Yoplait, The Irish Dairy Board, DCC plc, Flogas pic, Bank of ireland Group, North Star Bank, Flagship Bank, Yell U.k., Directel China/Portugal, Joffrey’s Coffee & Tea Company, BICSI, and the rebranding of Ireland’s national public transport agency, CIE Group.</p>
+        </div>
+      </div>
+  </section>
+    <section class="row bg-gery">
+      <div class="col-md-6">
+        <div class="staff-info ">
+          <h2>Francis Skipper</h2>
+          <div class="name-border"></div>
+          <div class="subheading">
+            <strong>Digital Marketing</strong>
+            <span class="university-name">Cambridge College/span>
+          </div>
+          <p> With more than 14 years of experience in global digital marketing, Francis oversees digital media campaigns that include media planning, SEO, PPC, display advertising, remarketing, out-of-home and social media marketing/advertising. As an experienced senior manager and business development driver, Francis has led successful online marketing campaigns for Fortune 500 level companies in the pharmaceutical, consumer packaged goods, healthcare, consumer electronics, B2B and retail spaces. Selected B2B and consumer clients include Bob’s Discount Furniture, AstraZeneca, Hood, The college of Healthcare Professions, and Ericsson. Prior to joining 451 Marketing , Francis worked in new business development and sales at iProspect where his clients included TIVo, Harry and David, Shop.com and Equinix. Prior to his expericnce with iProspect, Francis served as director of technology at catalyst Online where he worked with clients including Pfizer, Novartis, Boehringer Ingleheim, and Procter and Gamble.</p>
         </div>
       </div>
       <div class="col-md-6">
         <div class="staff-img">
-          <%= image_tag ('staff-3.png')%>
+          <%= image_tag ('staff-mem-7.png')%>
         </div>
       </div>
   </section>
