fixed the bg-color of each staff's sections row

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -109,7 +109,7 @@
       </div>
     </div>
   </section>
-  <section class="row bg-gery">
+  <section class="row">
       <div class="col-md-6">
         <div class="staff-img">
           <%= image_tag ('staff-mem-6.png')%>
