add play and push buttons in deck slider and also increse the sliding transition of slider

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -586,6 +586,11 @@ section
     font-family: 'texgyreadventor-bold' 
 .carousel-indicators .active
   background-color: #000
+#carouselButtons 
+  margin-left: 100px
+  position: absolute
+  bottom: 50px
+  left: 446px
   
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
