changes the presentation location and speaker name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,7 +76,7 @@
           <h2 class="section-heading"><span>NodeBomb</span> Presentation</h2>
           <div class="heading-border"></div>
           <div class="sub_heading">
-            <span>Location <a href="#">New York City</a></span> | <span>Speaker <a href="#">Ben Orenstien</a> </span> 
+            <span>Location <a href="#">Culver City, CA</a></span> | <span>Speaker <a href="#">Danso Gordon</a> </span> 
           </div>
         </header>
       </div>
