relace the Rene profile img in staff page and placed the Rene bio-info below the Danso and updates the lastest bio of Rene,Ali and Ratanak

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -31,25 +31,9 @@
   <section class="row">
     <div class="col-md-6">
       <div class="staff-img">
-        <%= image_tag ('staff-mem-2.png')%>
+        <%= image_tag ('mem-2.png')%>
       </div>
-    </div>
-    <div class="col-md-6">
-      <div class="staff-info ">
-        <h2>Ali Amirazizi</h2>
-        <div class="name-border"></div>
-        <div class="subheading">
-          <strong>Web Developer</strong>
-          <span class="university-name"> CS University Long Beach</span>
-        </div>
-        <p>With more than 3 years of experience in it, startups, customer service, sales, and marketing, Ali has launched a new career in web development. He specialize in front end development. Experienced with all stages of the development cycle for dynamic web projects. He is well versed in numerous programming language including JavaScript, SQL, and PHP.
-        Prior to joining NodeBomb, Ali worked for a software startup called Kuapay where he specialized in providing IT support. He organized marketing campaigns, and assisted with daily operations. He also worked as a QA gane tester for Square-Enix, a Japanese video company.
-        Ali has a degree in philosophy and is currently pursing a second degree in computer science.
-        </p>
-      </div>
-    </div>
-  </section>
-  <section class="row bg-gery">
+    </div>    
     <div class="col-md-6">
       <div class="staff-info ">
         <h2>Rene Zelaya</h2>
@@ -58,15 +42,26 @@
           <strong> Designer</strong>
           <span class="university-name">San Francisco Art Institude</span>
         </div>
-        <p>As a UX/UI Rene loves to Figure out what makes people tick. He appreciates the investigation into how peoples actions and behaviors are influenced by theirs senssory input, emotional state and opportunities that are presented to them. Answering these question with a effective and easy to use UI is how Rene brings value to any project he works on. Connecting users to their goals is where he finds success.
-        Strating as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype.
-        Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco.
-        He has experience in User Research, Information Architecture and Visual Design.</p>
+        <p>As a UX/UI Rene loves to Figure out what makes people tick and connecting users to their goals is where he finds success. Starting as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype. Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco. He has experience in User Research, Information Architecture and Visual Design.</p>
+      </div>
+    </div>
+  </section>
+  <section class="row bg-gery">
+    <div class="col-md-6">
+      <div class="staff-info ">
+        <h2>Ali Amirazizi</h2>
+        <div class="name-border"></div>
+        <div class="subheading">
+          <strong>Web Developer</strong>
+          <span class="university-name"> CS University Long Beach</span>
+        </div>
+        <p>With more than 3 years of experience in IT, startups, customer service, sales, and marketing, Ali has launched a new career in web development. Specializing in front end development he is experienced with all stages of the development cycle for dynamic web projects. He is well versed in numerous programming language including JavaScript, SQL, and PHP. Prior to joining NodeBomb, Ali worked for a software startup called Kuapay where he specialized in providing IT support. He organized marketing campaigns, and assisted with daily operations. He also worked as a QA gane tester for Square-Enix, a Japanese video company. Ali has a degree in philosophy and is currently pursing a second degree in computer science.
+        </p>
       </div>
     </div>
     <div class="col-md-6">
       <div class="staff-img">
-        <%= image_tag ('staff-mem-3.png')%>
+        <%= image_tag ('staff-mem-2.png')%>
       </div>
     </div>
   </section>
@@ -84,8 +79,7 @@
           <strong> Web Developer</strong>
           <span class="university-name"> Norton University</span>
         </div>
-        <p>Ratanak has been in the tech industry fir the least 3 year with an expertise in full-stack (front/back-end) development. He began his career in IT support for a non Profit and successfully built a website for an internal phone extension directory fir all employees. After graduating from developer bootcamp, he received invaluable experience working as the back-end developer for  the start-up company, GameKulture   Inc and also during that time founded his own startup with a realtor business.
-        “I love to ask people question and give ideas about the future features that end users need ”, he says. Since learning to code was so difficult for Ratanak, his passion to assist others from his knowledge and experience is an asset to the company.
+        <p>Ratanak has been charging through the tech industry for the last three years with an expertise in full-stack (front/back-end) development. He began his career in IT support for a non profit organization and successfully built a website for an internal phone extension directory for all of the employees. After graduating from developer bootcamp, he received invaluable experience working as the back-end developer for the start-up company, GameKulture Inc. Also during that time, fueled by his strong passion for development, Ratanak gained invaluable experience by creating his own startup company with a realtor business. “I love to ask people question and give ideas about the future features that end users need ".
         </p>
       </div>
     </div>
