changes in staff info Profession titles

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -39,7 +39,7 @@
         <h2>Rene Zelaya</h2>
         <div class="name-border"></div>
         <div class="subheading">
-          <strong> Designer</strong>
+          <strong>Graphic Designer</strong>
           <span class="university-name">San Francisco Art Institude</span>
         </div>
         <p>As a UX/UI Rene loves to Figure out what makes people tick and connecting users to their goals is where he finds success. Starting as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype. Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco. He has experience in User Research, Information Architecture and Visual Design.</p>
@@ -52,7 +52,7 @@
         <h2>Ali Amirazizi</h2>
         <div class="name-border"></div>
         <div class="subheading">
-          <strong>Web Developer</strong>
+          <strong>Front End Developer</strong>
           <span class="university-name"> CS University Long Beach</span>
         </div>
         <p>With more than 3 years of experience in IT, startups, customer service, sales, and marketing, Ali has launched a new career in web development. Specializing in front end development he is experienced with all stages of the development cycle for dynamic web projects. He is well versed in numerous programming language including JavaScript, SQL, and PHP. Prior to joining NodeBomb, Ali worked for a software startup called Kuapay where he specialized in providing IT support. He organized marketing campaigns, and assisted with daily operations. He also worked as a QA gane tester for Square-Enix, a Japanese video company. Ali has a degree in philosophy and is currently pursing a second degree in computer science.
@@ -76,7 +76,7 @@
         <h2>Ratanak Chheang</h2>
         <div class="name-border"></div>
         <div class="subheading">
-          <strong> Web Developer</strong>
+          <strong>Back End Developer</strong>
           <span class="university-name"> Norton University</span>
         </div>
         <p>Ratanak has been charging through the tech industry for the last three years with an expertise in full-stack (front/back-end) development. He began his career in IT support for a non profit organization and successfully built a website for an internal phone extension directory for all of the employees. After graduating from developer bootcamp, he received invaluable experience working as the back-end developer for the start-up company, GameKulture Inc. Also during that time, fueled by his strong passion for development, Ratanak gained invaluable experience by creating his own startup company with a realtor business. “I love to ask people question and give ideas about the future features that end users need ".
@@ -128,7 +128,7 @@
           <div class="name-border"></div>
           <div class="subheading">
             <strong>Digital Marketing</strong>
-            <span class="university-name">Cambridge College/span>
+            <span class="university-name">Cambridge College</span>
           </div>
           <p> With more than 14 years of experience in global digital marketing, Francis oversees digital media campaigns that include media planning, SEO, PPC, display advertising, remarketing, out-of-home and social media marketing/advertising. As an experienced senior manager and business development driver, Francis has led successful online marketing campaigns for Fortune 500 level companies in the pharmaceutical, consumer packaged goods, healthcare, consumer electronics, B2B and retail spaces. Selected B2B and consumer clients include Bob’s Discount Furniture, AstraZeneca, Hood, The college of Healthcare Professions, and Ericsson. Prior to joining 451 Marketing , Francis worked in new business development and sales at iProspect where his clients included TIVo, Harry and David, Shop.com and Equinix. Prior to his expericnce with iProspect, Francis served as director of technology at catalyst Online where he worked with clients including Pfizer, Novartis, Boehringer Ingleheim, and Procter and Gamble.</p>
         </div>
