--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -3,7 +3,7 @@
     <!-- <div class="row text-center">
       <iframe width='100%' height='800' src='/Final_NodBomb.pdf' frameborder='0' allowfullscreen></iframe>
     </div> -->
-    <div id="carousel-example-generic"class="carousel slide" data-interval="20000" data-ride="carousel">
+    <div id="carousel-example-generic"class="carousel slide" data-interval="28000" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -23,14 +23,14 @@
         <%end%>
         </div>
       <!-- Controls -->
-      <div id="carouselButtons">
+      <!-- <div id="carouselButtons">
         <button id="playButton" type="button" class="btn btn-default btn-xs">
             <span class="glyphicon glyphicon-play"></span>
          </button>
         <button id="pauseButton" type="button" class="btn btn-default btn-xs">
             <span class="glyphicon glyphicon-pause"></span>
         </button>
-      </div>
+      </div> -->
       <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
