--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -188,7 +188,7 @@
                 <%= image_tag("connect-developer.png", :alt => "community icon") %>
               </div>
               <h3>Connect with Developers across the globe</h3>
-              <p class="community-txt-2">Connect with developers across the globe, follow each other, share ideas, share code and more</p>
+              <p class="community-txt-2">Connect with developers across the globe, follow each other, share ideas, share code and more.</p>
             </div>
           </div>          
           <div class="col-md-3  text-center">
@@ -197,7 +197,7 @@
                 <%= image_tag("join-group.png", :alt => "community icon") %>
               </div>
               <h3>Search and join Q&A Groups</h3>
-              <p class="community-txt-3">Search any programming topic or language that interests you and quickly join our group communities and discussions </p>
+              <p class="community-txt-3">Search any programming topic or language that interests you and quickly join our group communities and discussions.</p>
             </div>
           </div>
           <div class="col-md-3 text-center">
@@ -206,7 +206,7 @@
                 <%= image_tag("startup-with-invester.png", :alt => "community icon") %>
               </div>          
               <h3>Startups connect with Investors</h3>
-              <p class="community-txt-4">Startups that meet the criteria can easily post their work to our exponentially growing list of VC's and Angel Investors</p>
+              <p class="community-txt-4">Startups that meet the criteria can easily post their work to our exponentially growing list of VC's and Angel Investors.</p>
             </div>
           </div>
         </div>
