--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -93,7 +93,7 @@
           <strong>  Public Relations</strong>
           <span class="university-name">UMASS, Amherst</span>
         </div>
-        <p>Karyn has more than 15 years of public relations experience representing technology, consumer packaged goods, retail, travel, B2B, and health care clients. Karyn specializes in developing and managing integrated public relations programs for clients including NxStage Medical, The Yankee Candle Company, BAILEYS Coffee Creamers and more, She currently servers as President of the Publicity Club of New England.
+        <p>Karyn has more than 15 years of public relations experience representing technology, consumer packaged goods, retail, travel, B2B, and health care clients. Karyn specializes in developing and managing integrated public relations programs for clients including NxStage Medical, The Yankee Candle Company, BAILEYS Coffee Creamers and more. She currently servers as President of the Publicity Club of New England.
         Prior to joining 451 Marketing, Karyn spent five years at Emerge PR, representing a wide range of local and national clients inculiding, Cartessis, CSG Systems, Harte-Hanks, Information Builders, Tizor and Trillium software. Karyn is an award-winning PR practitioner and has been published multiple times in PR trade publications.</p>
       </div>
     </div>
@@ -117,7 +117,7 @@
             <strong> Branding</strong>
             <span class="university-name">College of Marketing & Design</span>
           </div>
-          <p> As Director of Branding at 451 Marketing, Tyrone brings over 25 year's of international branding and creative experience to our firm. Tyrone helps companies develop winning strategies to strengthen brand presence, increase sales and forge strong customer relationships. Tyrone’s specialties include brand and corporate identity development, corporate communications, information design, product packaging, corporate and marketing collateral. Selected client experience includes Yoplait, The Irish Dairy Board, DCC plc, Flogas pic, Bank of ireland Group, North Star Bank, Flagship Bank, Yell U.k., Directel China/Portugal, Joffrey’s Coffee & Tea Company, BICSI, and the rebranding of Ireland’s national public transport agency, CIE Group.</p>
+          <p> As Director of Branding at 451 Marketing, Tyrone brings over 25 year's of international branding and creative experience to our firm. Tyrone helps companies develop winning strategies to strengthen brand presence, increase sales and forge strong customer relationships. Tyrone’s specialties include brand and corporate identity development, corporate communications, information design, product packaging, corporate and marketing collateral. Selected client experience includes Yoplait, The Irish Dairy Board, DCC plc, Flogas pic, Bank of Ireland Group, North Star Bank, Flagship Bank, Yell U.k., Directel China/Portugal, Joffrey’s Coffee & Tea Company, BICSI, and the rebranding of Ireland’s national public transport agency, CIE Group.</p>
         </div>
       </div>
   </section>
@@ -130,7 +130,7 @@
             <strong>Digital Marketing</strong>
             <span class="university-name">Cambridge College</span>
           </div>
-          <p> With more than 14 years of experience in global digital marketing, Francis oversees digital media campaigns that include media planning, SEO, PPC, display advertising, remarketing, out-of-home and social media marketing/advertising. As an experienced senior manager and business development driver, Francis has led successful online marketing campaigns for Fortune 500 level companies in the pharmaceutical, consumer packaged goods, healthcare, consumer electronics, B2B and retail spaces. Selected B2B and consumer clients include Bob’s Discount Furniture, AstraZeneca, Hood, The college of Healthcare Professions, and Ericsson. Prior to joining 451 Marketing , Francis worked in new business development and sales at iProspect where his clients included TIVo, Harry and David, Shop.com and Equinix. Prior to his expericnce with iProspect, Francis served as director of technology at catalyst Online where he worked with clients including Pfizer, Novartis, Boehringer Ingleheim, and Procter and Gamble.</p>
+          <p> With more than 14 years of experience in global digital marketing, Francis oversees digital media campaigns that include media planning, SEO, PPC, display advertising, remarketing, out-of-home and social media marketing/advertising. As an experienced senior manager and business development driver, Francis has led successful online marketing campaigns for Fortune 500 level companies in the pharmaceutical, consumer packaged goods, healthcare, consumer electronics, B2B and retail spaces. Selected B2B and consumer clients include Bob’s Discount Furniture, AstraZeneca, Hood, The college of Healthcare Professions, and Ericsson. Prior to joining 451 Marketing , Francis worked in new business development and sales at iProspect where his clients included TIVo, Harry and David, Shop.com and Equinix. Prior to his experience with iProspect, Francis served as director of technology at catalyst Online where he worked with clients including Pfizer, Novartis, Boehringer Ingleheim, and Procter and Gamble.</p>
         </div>
       </div>
       <div class="col-md-6">
