reduce the logo size of inside page and fixed the inside page navigation responsive error

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -576,12 +576,14 @@ section
     width: 40px
     display: inline-block
     margin: 0px
+    margin-top: 4px
   .navbar-brand > span  
-    font-size: 46px
+    font-size: 40px
     position: relative
     top: 9px
     color: #000
     margin-left: -8px
+    line-height: 26px
   .navbar-brand span span
     font-family: 'texgyreadventor-bold' 
 .carousel-indicators .active
@@ -646,6 +648,10 @@ section
   #showcase
     height: 100%
 @media (max-width: 991px)
+  .nav > li > a
+    padding: 18px 5px
+  .navbar-default .nav li a
+    font-size: 18px
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
     margin: 0px
@@ -750,6 +756,11 @@ section
   #showcase
     height: 100%
 @media (max-width: 767px)
+  .inner-page .navbar-brand > span
+    font-size: 30px
+  .navbar-brand img
+    padding: 0px 5px
+    width: 100%
   .navbar-default .nav li a
     color: #fff
     background-color: rgba(47, 166, 218, 0.81)
