--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <div class="modal fade video-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-         <iframe src="https://player.vimeo.com/video/133623046" width="100%" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/133623046">NodeBomb Commercial HD</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p> 
+         <iframe src="https://player.vimeo.com/video/133623046" width="100%" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </div>
   </div>
