add background color to main banner section of homepage

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -271,6 +271,7 @@ fieldset[disabled] .btn-xl.active {
 
 header.hero {  
   color: #fff;
+  background-color: rgba(0, 0, 0, 0.81) ;
   background-attachment: scroll;
   background-image: asset_url('banner-1.jpg');
   background-position: center center;
