add popup modal in deck nav link with css styles

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -593,7 +593,34 @@ section
   position: absolute
   bottom: 50px
   left: 446px
-  
+.user-access-pswd
+  display: inline-block
+  padding: 20px
+  p
+    font-size: 20px
+.request-btn
+  margin-left: 20px
+  padding: 15px
+  background-color: #F09506
+  color: #fff
+  font-weight: bold
+  &:hover
+    background-color: #EA8F00
+    color: #fff
+.deck-pop
+  border-top: 5px solid #00A0C6
+  border-top-left-radius: 5px
+  border-top-right-radius: 5px
+  h4
+    font-weight: bold
+.password-label
+  input[type="password"]
+    padding: 3px
+    font-size: 24px
+.seperater
+  padding: 0px 0px 20px
+  text-align: center
+  font-weight: bold
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
