Add pop up design of invester form when we click on request access btn

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -621,6 +621,10 @@ section
   padding: 0px 0px 20px
   text-align: center
   font-weight: bold
+.Comments-hd
+  font-weight: bold
+  margin-top: 30px
+
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
