--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -624,6 +624,9 @@ section
 .Comments-hd
   font-weight: bold
   margin-top: 30px
+#myModal,
+#myModal1
+  background-color: #333
 
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
