--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
                 <a class="page-scroll" href="/about">About</a>
               </li>
               <li>
-                <a class="page-scroll" href="#" data-toggle="modal" data-target="#myModal">Deck</a>
+                <a class="page-scroll" href="/deck">Deck</a>
               </li>
               <li>
                 <a class="page-scroll" href="#" data-toggle="modal" data-target=".video-modal-lg">Video</a>
@@ -65,30 +65,6 @@
     </nav>
   </div>
 </header>
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header deck-pop">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"><span><i class="fa fa-table"></i>
-        </span>&nbsp;View Deck Board</h4>
-      </div>
-      <div class="modal-body">
-        <form action="">
-          <span class="user-access-pswd"><p>Password</p></span><span class="password-label"><input type="password" value=""></span>
-        </form>
-        <div class="seperater">OR</div>
-        <button id="invester-form"type="button" class="btn btn-default request-btn" data-dismiss="modal" class="modal fade" role="dialog" data-toggle="modal" data-target="#myModal1">REQUEST ACCESS</button>
-      </div>
-      <div class="modal-footer">
-      </div>
-    </div>
-
-  </div>
-</div>
 <!--End Header -->
 <div id="myModal1" class="modal fade" role="dialog">
   <div class="modal-dialog">
@@ -96,7 +72,7 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header deck-pop">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
         <h4 class="modal-title">I'M INTERESTED IN INVESTING</h4>
       </div>
       <div class="modal-body">
