--- a/app/views/shared/_innerheader.html.erb
+++ b/app/views/shared/_innerheader.html.erb
@@ -24,7 +24,7 @@
           <a class="page-scroll" href="/about">About</a>
         </li>
         <li>
-          <a class="page-scroll" href="#" data-toggle="modal" data-target="#myModal">Deck</a>
+          <a class="page-scroll" href="/deck">Deck</a>
         </li>
         <li>
           <a class="page-scroll" href="#" data-toggle="modal" data-target=".video-modal-lg">Video</a>
@@ -41,7 +41,7 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal2" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
@@ -64,13 +64,13 @@
 
   </div>
 </div>
-<div id="myModal1" class="modal fade" role="dialog">
+<div id="myModal1" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header deck-pop">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
         <h4 class="modal-title">I'M INTERESTED IN INVESTING</h4>
       </div>
       <div class="modal-body">
