added updates text in Board deck popup modal

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -628,6 +628,11 @@ section
 #myModal1
   background-color: #333
 
+#UserLoginForm
+  h4
+    strong
+      color: #00A0C6
+
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
