--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -54,6 +54,7 @@
       </div>
       <div class="modal-body">
         <form action="" id="UserLoginForm">
+          <h4><strong>Our 12-month Seed Funding Round is $475K</strong></h4><br>
           <span class="user-access-pswd"><p>Password</p></span><span class="password-label"><input type="password" value="" id="password"></span>
         </form>
         <div class="seperater">OR</div>
