add investor/group name input type below the input type email of requesting investing form

--- a/app/views/shared/_innerheader.html.erb
+++ b/app/views/shared/_innerheader.html.erb
@@ -84,6 +84,8 @@
           </div>
           <h4 class="Comments-hd">Email</h4>
           <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+          <h4 class="Comments-hd">Investor/Group Name</h4>
+          <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
           <h4 class="Comments-hd">Contact Number</h4>
           <input type="text" class="form-control" id="Phone" name="Phone" placeholder="Contact Number" pattern="[0-9]*" title="Enter numbers only." required>
           <h4 class="Comments-hd">Comments or Questions (optional)</h4>
