remove the banner texts as per feedback updates

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -158,12 +158,12 @@ header.hero
       font-family: 'raleway-bold'
       font-weight: bold
       line-height: 75px
+      margin-top: 65px
       span
         font-size: 40px
         font-family: 'raleway-regular'
         font-weight: normal
       .bold-banner-txt
-        border-right: 1px solid #fff
         padding-right: 30px
         font-family: 'raleway-bold'
         font-size: 55px
@@ -632,7 +632,8 @@ section
   h4
     strong
       color: #00A0C6
-
+.email_register label
+  font-size: 25px
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
