--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
   <div class="container banner-margin-top">
     <div class="row">      
       <section class="header_content">
-        <h1 ><span>increase.</span><br> <span class="bold-banner-txt">connect & support</span><span class="what-yuo-build-txt">#whatwillyoubuild</span></h1>
-        <p class="banner-txt">The Online Work Showcase for Software Developers, enhance and connect your entire work footprint with one click.</p>
+        <h1 ><span>increase.</span><br> <span class="bold-banner-txt">connect & support</span><!-- <span class="what-yuo-build-txt">#whatwillyoubuild</span> --></h1>
+        <!-- <p class="banner-txt">The Online Work Showcase for Software Developers, enhance and connect your entire work footprint with one click.</p> -->
         <section class="email_register ">
           <form action="" class="">
             <div class="form-group">
