change the password of deck board popup

--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -76,7 +76,7 @@
     // }) 
     $('#UserLoginForm').submit(function(){
       var password = $('#password').val();
-      if (password === 'password'){
+      if (password === 'N0debomb15'){
         $('#myModal').modal('hide');
         return false;
       }else{
