Change the password of Board deck sliding access

--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -76,7 +76,7 @@
     // }) 
     $('#UserLoginForm').submit(function(){
       var password = $('#password').val();
-      if (password === 'N0debomb15'){
+      if (password === 'Bombsquad'){
         $('#myModal').modal('hide');
         return false;
       }else{
